// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Pager Allineamento 1`] = `
<div>
  <section>
    <nav
      aria-label="Esempio di navigazione"
      class="justify-content-center pagination-wrapper"
    >
      <ul
        class="pagination"
      >
        <ul
          class="pagination"
        >
          <li
            class="page-item disabled"
          >
            <a
              aria-label="Previous"
              class="page-link"
              href="#"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  aria-hidden="true"
                  class="icon"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                  />
                </svg>
              </span>
              <span
                class="visually-hidden"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              aria-current="page"
              class="page-link"
              href="#"
            >
              1
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              href="#"
            >
              2
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              href="#"
            >
              3
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              aria-label="Next"
              class="page-link"
              href="#"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  aria-hidden="true"
                  class="icon"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                  />
                </svg>
              </span>
              <span
                class="visually-hidden"
              >
                Next
              </span>
            </a>
          </li>
        </ul>
      </ul>
    </nav>
    <nav
      aria-label="Esempio di navigazione"
      class="justify-content-end pagination-wrapper"
    >
      <ul
        class="pagination"
      >
        <ul
          class="pagination"
        >
          <li
            class="page-item disabled"
          >
            <a
              aria-label="Previous"
              class="page-link"
              href="#"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  aria-hidden="true"
                  class="icon"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                  />
                </svg>
              </span>
              <span
                class="visually-hidden"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              aria-current="page"
              class="page-link"
              href="#"
            >
              1
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              href="#"
            >
              2
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              href="#"
            >
              3
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              aria-label="Next"
              class="page-link"
              href="#"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  aria-hidden="true"
                  class="icon"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                  />
                </svg>
              </span>
              <span
                class="visually-hidden"
              >
                Next
              </span>
            </a>
          </li>
        </ul>
      </ul>
    </nav>
  </section>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Pager Esempi 1`] = `
<div>
  <nav
    aria-label="Esempio di navigazione"
    class="pagination-wrapper"
  >
    <ul
      class="pagination"
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item"
        >
          <a
            aria-label="Previous"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            2
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            3
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Next"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Pager JumpToPage 1`] = `
<div>
  <nav
    aria-label="Esempio di paginazione"
    class="mb-3 pagination-wrapper"
  >
    <ul
      class="pagination"
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item"
        >
          <a
            aria-label="Previous"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            …
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-current="page"
            class="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            …
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Next"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
      <form
        class=""
      >
        <div
          class="mb-3"
        >
          <input
            aria-describedby="jumpToPageDescription"
            class="form-control form-control"
            id="jumpToPage"
            maxlength="2"
            type="text"
            value=""
          />
          <label
            class="form-label"
            for="jumpToPage"
          >
            Vai a ...
          </label>
        </div>
      </form>
    </ul>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Pager LinkTestuali 1`] = `
<div>
  <nav
    aria-label="Esempio di paginazione"
    class="mb-3 pagination-wrapper"
  >
    <ul
      class="pagination"
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item"
        >
          <a
            aria-label="Previous"
            class="text page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              Precedente
            </span>
            <span
              class="visually-hidden"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            …
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-current="page"
            class="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            …
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Next"
            class="text page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              Successiva
            </span>
            <span
              class="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Pager MoreComponent 1`] = `
<div>
  <nav
    aria-label="Esempio di paginazione"
    class="mb-3 pagination-wrapper"
  >
    <ul
      class="pagination"
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item"
        >
          <a
            aria-label="Previous"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            …
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-current="page"
            class="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            …
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Next"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Pager PageChanger 1`] = `
<div>
  <nav
    aria-label="Esempio di paginazione"
    class="mb-3 pagination-wrapper"
  >
    <ul
      class="pagination"
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item"
        >
          <a
            aria-label="Previous"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            …
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-current="page"
            class="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            …
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Next"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
      <div
        class="dropdown"
      >
        <button
          aria-haspopup="true"
          aria-label="Salta alla pagina"
          class="dropdown-toggle btn btn-"
          data-bs-toggle="dropdown"
          id="pagerChanger"
        >
          10/pagina
          <svg
            class="icon icon icon-primary icon-sm"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
            />
          </svg>
          <svg
            class="icon icon-expand icon-sm icon-light"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
            />
          </svg>
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="link-list-wrapper"
          >
            <ul
              class="link-list"
            >
              <li>
                <a
                  class="active list-item"
                >
                  pag. 10
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  pag. 20
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  pag. 30
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  pag. 40
                </a>
              </li>
              <li>
                <a
                  class="list-item"
                >
                  pag. 50
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </ul>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Pager Responsive 1`] = `
<div>
  <nav
    aria-label="Esempio di navigazione"
    class="pagination-wrapper"
  >
    <ul
      class="pagination"
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item"
        >
          <a
            aria-label="Previous"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          class="d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            9
          </a>
        </li>
        <li
          class="d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            10
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-current="page"
            class="page-link"
            href="#"
          >
            <span
              class="d-sm-none"
            >
              Pagina 
            </span>
            11
          </a>
        </li>
        <li
          class="d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            12
          </a>
        </li>
        <li
          class="d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            13
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Next"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Pager SimpleMode 1`] = `
<div>
  <nav
    aria-label="Esempio di paginazione"
    class="mb-3 pagination-wrapper"
  >
    <ul
      class="pagination"
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item disabled"
        >
          <a
            aria-label="Previous"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            1
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            /
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            5
          </span>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Next"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Pager StatoDisabilitatoEAttivo 1`] = `
<div>
  <nav
    aria-label="Esempio di navigazione"
    class="pagination-wrapper"
  >
    <ul
      class="pagination"
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item disabled"
        >
          <a
            aria-label="Previous"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-current="page"
            class="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            2
          </a>
        </li>
        <li
          class="page-item disabled"
        >
          <a
            class="page-link"
            href="#"
          >
            3
          </a>
        </li>
        <li
          class="page-item disabled"
        >
          <a
            aria-label="Next"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Pager TotalNumber 1`] = `
<div>
  <nav
    aria-label="Esempio di paginazione"
    class="pagination-wrapper pagination-total"
  >
    <ul
      class="pagination"
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item"
        >
          <a
            aria-label="Previous"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M14.6 17.2 9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            …
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            aria-current="page"
            class="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <span
            class="page-link"
          >
            …
          </span>
        </li>
        <li
          class="d-none d-sm-block page-item"
        >
          <a
            class="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Next"
            class="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m9.8 17.2-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              class="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </ul>
    <p>
      <span
        class="visually-hidden"
      >
        Pagina
      </span>
       24 di 50
    </p>
  </nav>
</div>
`;
